add_custom_command(OUTPUT TTacPhysicsDict.cxx TTacPhysicsDict_rdict.pcm TTacPhysics.rootmap COMMAND rootcint -f TTacPhysicsDict.cxx -rmf TTacPhysics.rootmap -rml libNPMisc.dylib -I../Core -c TTacPhysics.h DEPENDS TTacPhysics.h)
add_custom_command(OUTPUT TTriggerDataDict.cxx TTriggerDataDict_rdict.pcm TTriggerData.rootmap COMMAND rootcint -f TTriggerDataDict.cxx -rmf TTriggerData.rootmap -rml libNPMisc.dylib -I../Core -c TTriggerData.h DEPENDS TTriggerData.h)
add_custom_command(OUTPUT TTacDataDict.cxx TTacDataDict_rdict.pcm TTacData.rootmap COMMAND rootcint -f TTacDataDict.cxx -rmf TTacData.rootmap -rml libNPMisc.dylib -I../Core -c TTacData.h DEPENDS TTacData.h)
add_library(NPMisc SHARED TTacPhysics.cxx TTacData.cxx TTriggerData.cxx TTacDataDict.cxx TTriggerDataDict.cxx TTacPhysicsDict.cxx)
target_link_libraries(NPMisc ${ROOT_LIBRARIES} NPCore) 
install(FILES TTacData.h TTriggerData.h DESTINATION ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})

install(FILES TTacData.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TTriggerData.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TTacPhysics.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TTacDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TTriggerDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TTacPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TTacDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TTriggerDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TTacPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
