add_custom_command(OUTPUT TNanaPhysicsDict.cxx TNanaPhysicsDict_rdict.pcm TNanaPhysics.rootmap COMMAND rootcint -f TNanaPhysicsDict.cxx -rmf TNanaPhysics.rootmap -rml libNPNana.dylib -I../Core -c TNanaPhysics.h DEPENDS TNanaPhysics.h)
add_custom_command(OUTPUT TNanaDataDict.cxx TNanaDataDict_rdict.pcm TNanaData.rootmap COMMAND rootcint -f TNanaDataDict.cxx -rmf TNanaData.rootmap -rml libNPNana.dylib -I../Core -c TNanaData.h DEPENDS TNanaData.h)
add_library(NPNana SHARED TNanaData.cxx TNanaPhysics.cxx TNanaDataDict.cxx TNanaPhysicsDict.cxx )
target_link_libraries(NPNana ${ROOT_LIBRARIES} NPCore) 
install(FILES TNanaData.h TNanaPhysics.h DESTINATION ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})

install(FILES TNanaData.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TNanaPhysics.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TNanaDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TNanaPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TNanaDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TNanaPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
